--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,8 @@
 </head>
 <body>
 
-  <%-# Here we are handling flash msgs for every view -%>
-  <% flash.each do |name,msg| %>
-    <ul>
-      <li> <%= msg%> <li>
-    </ul>
-  <% end %>
 
+<%= render 'layouts/messages' %>
   
 <%= yield %>
 
