--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,26 +1,5 @@
 <h2> Create an article </h2>
 
-<% if @article.errors.any? %>
-  <h2> ERRORS ARE- </h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li> <%= msg %> </li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @article do |f|%>
-  <p> 
-    <%= f.label :title%> <br/>
-    <%= f.text_field :title%>
-  </p>
-  <p> 
-    <%= f.label :description%> <br/>
-    <%= f.text_area :description%>
-  </p>
-  <p> 
-    <%= f.submit %> <br/>
-  </p>
-<% end %>
+<%= render 'form' %>
 
 <%= link_to "Back to Index" , articles_path %>
