Changes made for flash masssages

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,11 +8,11 @@
   </ul>
 <% end %>
 
-<%= form_for @article do |f|%>
-  <p> 
-    <%= f.label :title%> <br/>
-    <%= f.text_field :title%>
-  </p>
+<%= form_for @article  , method: "put" do |f|%>
+  
+    <%#= f.label :title%> <br/>
+    <%#= f.text_field :title%>
+  
   <p> 
     <%= f.label :description%> <br/>
     <%= f.text_area :description%>
